<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<TextView
    android:id="@+id/tvQuestion"
    android:padding="@dimen/_16sdp"
    android:textSize="@dimen/_16ssp"
    android:textStyle="bold"
    android:text="@string/Question"
    android:textColor="@color/colorPrimary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <TextView
android:id="@+id/tvTitle"
        android:padding="@dimen/_16sdp"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:text="@string/IdentifyImage"
        android:layout_below="@+id/tvQuestion"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_below="@+id/tvque"
        android:layout_height="wrap_content"
        android:id="@+id/answersgrp"
        android:clickable="true"
        android:layout_centerVertical="true">
        <!--android:layout-->
        <!--android:checkedButton="@+id/radioButton"-->


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A"
            android:id="@+id/radioButton"
            android:checked="false"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="B"
            android:id="@+id/radioButton2"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="C"
            android:id="@+id/radioButton3"
            android:checked="false" />


    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:id="@+id/button3"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_below="@+id/answersgrp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#3F51B5"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Quit"
        android:id="@+id/buttonquit"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#F44336"
        android:textColor="#ffffff" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/tvque"
        android:layout_marginBottom="52dp"
        android:layout_below="@+id/tvTitle"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/YourScore"
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:textSize="19dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:id="@+id/textView4"
        android:text="0"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:textSize="19dp" />

</RelativeLayout>
