<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/ll_reg_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/EnterOption1"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_option1"
                android:hint="@string/EnterOption1"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/edittext_rounded"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/EnterOption2"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_option2"
                android:hint="@string/EnterOption2"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/edittext_rounded"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/EnterOption3"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_option3"
                android:hint="@string/EnterOption3"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/edittext_rounded"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/EnterAnswer"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_answer"
                android:hint="@string/EnterAnswer"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/edittext_rounded"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edittext_rounded"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:entries="@array/types"
                android:id="@+id/sp_types"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edittext_rounded"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:entries="@array/levels"
                android:id="@+id/sp_levels"/>

            <Button
                android:id="@+id/btn_upload_img"
                android:text="@string/UploadImage"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:textColor="#03DAC5"
                android:background="@drawable/button_rounded3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp" />



            <Button
                android:id="@+id/btn_submit"
                android:text="@string/Submit"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:textColor="#03DAC5"
                android:background="@drawable/button_rounded3"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_35sdp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

