<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F7F7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

       android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/_3sdp"
                app:cardCornerRadius="@dimen/_1sdp"
                android:layout_margin="@dimen/_4sdp"
                app:cardBackgroundColor="#fff"
                app:cardMaxElevation="@dimen/_3sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/animal"></ImageView>


                   <Button
                    android:id="@+id/btnAnimals"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Animals" />
                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/_3sdp"
                app:cardCornerRadius="@dimen/_1sdp"
                android:layout_margin="@dimen/_4sdp"
                app:cardBackgroundColor="#fff"
                app:cardMaxElevation="@dimen/_3sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/shpp"></ImageView>
            <Button
                android:id="@+id/btnShapes"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Shapes" />

            </LinearLayout>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/_3sdp"
                app:cardCornerRadius="@dimen/_1sdp"
                android:layout_margin="@dimen/_4sdp"
                app:cardBackgroundColor="#fff"
                app:cardMaxElevation="@dimen/_3sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/color"></ImageView>
            <Button
                android:id="@+id/btnColors"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Colors" />
            </LinearLayout>



            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_main"/>

</androidx.drawerlayout.widget.DrawerLayout>

